--- a/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
+++ b/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
@@ -1,14 +1,24 @@
 <div class="container">
   <div class="row m-2">
-    <div class="col-8">
+    <div class="col-6">
       <h1 class = "">Turma {{turma?.cod}}</h1>
     </div>
-    <button id="btn-buscar" class="btn btn-primary col-4" (click)="editarTurma();">
-      <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-      </svg>
-      Editar
-    </button>
+    <div class="col-3 p-2 header-button">
+      <button id="btn-buscar" class="btn btn-primary w-100" (click)="editarTurma();" [disabled]="sessaoAtiva">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+        </svg>
+        Editar
+      </button>
+    </div>
+    <div class="col-3 p-2 header-button">
+      <button id="btn-buscar" class="btn btn-warning w-100" [routerLink]="['/Sessao', turma.id]" routerLinkActive="active">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-ruled-fill" viewBox="0 0 16 16">
+          <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M3 9h10v1H6v2h7v1H6v2H5v-2H3v-1h2v-2H3z"/>
+        </svg>
+        Avaliação
+      </button>
+    </div>
   </div>
 
   <div ngbAccordion>
@@ -23,11 +33,11 @@
           <ng-template>
             <div class="m-2">
               <div class="row">
-                <div class="col-8 p-2">
+                <div class="col-9 p-2">
                   <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroAlunos">
                 </div>
-                <div class="col-4 p-2 header-button">
-                  <button id="btn-buscar" class="btn btn-primary w-100" (click)="importAlunos();">
+                <div class="col-3 p-2 header-button">
+                  <button id="btn-buscar" class="btn btn-primary w-100" (click)="importAlunos();" [disabled]="sessaoAtiva">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-file-earmark-spreadsheet" viewBox="0 0 16 16">
                       <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V9H3V2a1 1 0 0 1 1-1h5.5zM3 12v-2h2v2zm0 1h2v2H4a1 1 0 0 1-1-1zm3 2v-2h3v2zm4 0v-2h3v1a1 1 0 0 1-1 1zm3-3h-3v-2h3zm-7 0v-2h3v2z"/>
                     </svg>
@@ -51,7 +61,7 @@
                       <td style= 'text-align: center'>{{aluno.id}}</td>
                       <td>{{aluno.nome}}</td>
                       <td style= 'text-align: center'>
-                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " >
+                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " [disabled]="sessaoAtiva">
                           <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
                           </svg>
@@ -88,11 +98,11 @@
             <div class="m-2">
               <span class="">Nota Máxima: {{turma?.notaMax}}</span >
               <div class="row">
-                <div class="col-8 p-2">
+                <div class="col-9 p-2">
                   <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroCriterios">
                 </div>
-                <div class="col-4 p-2 header-button">
-                  <button id="btn-buscar" class="btn btn-primary w-100 " (click)="alterarCriterioTurma();">
+                <div class="col-3 p-2 header-button">
+                  <button id="btn-buscar" class="btn btn-primary w-100 " (click)="alterarCriterioTurma();" [disabled]="sessaoAtiva">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                       <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
                     </svg>
@@ -116,7 +126,7 @@
                       <td style= 'text-align: center'>{{criterio.id}}</td>
                       <td>{{criterio.nome}}</td>
                       <td style= 'text-align: center'>
-                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " (click)="editarCriterio(criterio)">
+                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " (click)="editarCriterio(criterio)" [disabled]="sessaoAtiva">
                           <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
                           </svg>
@@ -152,11 +162,11 @@
           <ng-template>
             <div class="m-2">
               <div class="row">
-                <div class="col-8 p-2">
+                <div class="col-9 p-2">
                   <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroGrupos">
                 </div >
-                <div class="col-4 p-2 header-button">
-                  <button id="btn-buscar" class="btn btn-primary w-100" (click)="alterarGruposTurma();">
+                <div class="col-3 p-2 header-button">
+                  <button id="btn-buscar" class="btn btn-primary w-100" (click)="alterarGruposTurma();" [disabled]="sessaoAtiva">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                       <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
                     </svg>
@@ -179,8 +189,8 @@
                     <tr>
                       <td style= 'text-align: center'>{{grupo.id}}</td>
                       <td>{{grupo.nome}}</td>
-                      <td>
-                        <button id="btn-buscar" class="btn btn-primary w-100" (click)="alterarAlunosGrupo(grupo);">
+                      <td style= 'text-align: center'>
+                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 "  (click)="alterarAlunosGrupo(grupo);" [disabled]="sessaoAtiva">
                           <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
                           </svg>
