--- a/front/webav360/src/app/Components/nav/nav.component.html
+++ b/front/webav360/src/app/Components/nav/nav.component.html
@@ -7,14 +7,11 @@
       </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav">
-          <li class="nav-item nav-link">
+          <!-- <li class="nav-item nav-link">
               <button class="nav-link active" (click)="offcanvas.dismiss('Close click')" routerLink="" routerLinkActive="active" >Início</button>
-          </li>
+          </li> -->
           <li class="nav-item nav-link">
               <button class="nav-link active" (click)="offcanvas.dismiss('Close click')" routerLink="/Turmas" routerLinkActive="active" >Turmas</button>
-          </li>
-          <li class="nav-item nav-link">
-              <button class="nav-link active" (click)="offcanvas.dismiss('Close click')" routerLink="/Alunos" routerLinkActive="active" >Alunos</button>
           </li>
           <li class="nav-item nav-link">
               <button class="nav-link active" (click)="offcanvas.dismiss('Close click')" routerLink="/Criterios" routerLinkActive="active" >Critérios</button>
